# livraria

./: .gitignore  db.sqlite3  index.html  livraria.json  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_alter_autor_email.py  0002_editora.py  0003_autor_livro.py  0003_livro_capa.py  0004_rename_descricao_genero_nome.py  0005_livro_autores.py
livraria/models/: __init__.py  genero.py  livro.py
livraria/serializers/: __init__.py  autor.py  genero.py  livro.py
livraria/views/: __init__.py  autor.py  editora.py  genero.py  livro.py
src/: App.vue
src/api/: autores.js  editoras.js  generos.js  livros.js
src/router/: index.js
src/views/: AutorView.vue  EditoraView.vue  GeneroView.vue  LivroView.vue
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
