[tool.pdm]

[project]
name = "livraria"
version = "0.1.0"
description = ""
authors = [
    {name = "jskahl", email = "josekahl333@gmail.com"},
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
